--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -12,46 +12,5 @@
 </div>
 
 <div class="messages">
-  <div class="massege">
-    <div class="upper-message">
-      <div class="message-user">
-        Tom
-      </div>
-      <div class="message-date">
-        2020/3/31(wed) 12:43:30
-      </div>
-    </div>
-    <div class="lower-message">
-      <div class="message-content">
-        おはよう
-      </div>
-    </div>
-    <div class="massege">
-      <div class="upper-message">
-        <div class="message-user">
-          Sim
-        </div>
-        <div class="message-date">
-          2020/3/31(wed) 12:43:30
-        </div>
-      </div>
-      <div class="lower-message">
-        <div class="message-content">
-          こんばんわ
-        </div>
-      </div>
-    </div>
-  </div>
+  <%= render partial: 'message', collection: @messages %>
 </div>
-
-
-  <%= form_with model: [@room, @message], html: {class: "form"}, local: true do |f|%>
-    <div class="form-input">
-      <%= f.text_field :content, class: 'form-message', placeholder: "type a message" %>
-      <label class="form-image">
-        <span class="image-file">画像</span>
-        <%= f.file_field :image, class: "hidden"%>
-      </label>
-    </div> 
-    <input class="form-submit" type="submit" value="送信">
-  <% end %> 
